Fixed Exe Name in Config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
 			"request": "launch",
 			"name": "Amiga 500",
 			"config": "A500",
-			"program": "${workspaceFolder}/build/lore",
+			"program": "${workspaceFolder}/build/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-130.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
@@ -15,7 +15,7 @@
 			"request": "launch",
 			"name": "Amiga 1200",
 			"config": "A1200",
-			"program": "${workspaceFolder}/build/lore",
+			"program": "${workspaceFolder}/build/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		}
