--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,14 @@ project(Smite LANGUAGES ASM C)
 
 set(CMAKE_C_STANDARD 11)
 
-file(GLOB_RECURSE SOURCES src/*.c include/*.h)
+file(GLOB_RECURSE SOURCES src/*.c src/game/*.c src/misc/*.c include/*.h)
+
 
 
 if(ELF2HUNK)
 	set(SMITE_EXECUTABLE smite.elf)
 	set(SMITE_OUTPUT_EXECUTABLE smite.exe)
-	add_executable(${SMITE_EXECUTABLE} ${SOURCES} src/smite.c)
+	add_executable(${SMITE_EXECUTABLE} ${SOURCES})
 	
 	target_link_libraries(${SMITE_EXECUTABLE} -Wl,-Map=smite.map)
 	
