Refactor code to generate ADF file and update game graphics
- Added a new target to generate an ADF file
- Changed the wallset used in the game from factory.wll to factory2.wll
- Updated the background bitmap format from 6-bit interleaved to 4-bit interleaved
- Removed unnecessary systemUse() call in introGsCreate()
- Added blitCopy() calls for initial render of both front and back buffers in gameGsCreate()
- Replaced drawView() function's blitCopy() call with blitCopyMask()
- Added a new logo image for title screen and updated its display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,4 +67,15 @@ add_custom_target(generateZip COMMAND
 	"${CMAKE_CURRENT_BINARY_DIR}/${SMITE_OUTPUT_EXECUTABLE}" "${DATA_DIR}"
 	COMMENT "Generating ${smite_ZIP_NAME}.zip"
 )
+# Generating ADF
+set(ADF_DIR "${CMAKE_CURRENT_BINARY_DIR}/adf")
+add_custom_target(generateAdf
+	COMMAND ${CMAKE_COMMAND} -E make_directory "${ADF_DIR}/s"
+	COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${SMITE_OUTPUT_EXECUTABLE}" "${ADF_DIR}"
+	COMMAND ${CMAKE_COMMAND} -E copy_directory "${DATA_DIR}" "${ADF_DIR}/data"
+	COMMAND ${CMAKE_COMMAND} -E echo "${SMITE_OUTPUT_EXECUTABLE}" > "${ADF_DIR}/s/startup-sequence"
+	COMMAND exe2adf -l ${CMAKE_PROJECT_NAME} -a "${CMAKE_PROJECT_NAME}.adf" -d ${ADF_DIR}
+	COMMAND ${CMAKE_COMMAND} -E rm -rf "${ADF_DIR}"
+	COMMENT "Generating ADF file"
+)
 
