--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 			"type": "amiga",
 			"request": "launch",
@@ -15,6 +16,24 @@
 			"request": "launch",
 			"name": "Amiga 1200",
 			"config": "A1200",
+			"program": "${workspaceFolder}/build/smite",
+			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
+			"internalConsoleOptions": "openOnSessionStart"
+		},
+		{
+			"type": "amiga",
+			"request": "launch",
+			"name": "Amiga 1200-4mb",
+			"config": "A1200-FAST",
+			"program": "${workspaceFolder}/build/smite",
+			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
+			"internalConsoleOptions": "openOnSessionStart"
+		},
+		{
+			"type": "amiga",
+			"request": "launch",
+			"name": "Amiga 4000",
+			"config": "A4000",
 			"program": "${workspaceFolder}/build/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
 			"internalConsoleOptions": "openOnSessionStart"
