--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Smite LANGUAGES ASM C)
 
 set(CMAKE_C_STANDARD 17)
 file(GLOB_RECURSE SOURCES src/*.c src/game/*.c src/misc/*.c src/maze/*.c src/gfx/*.c include/*.h)
-
+set(ACE_USE_AGA_FEATURES ON)
 if(ELF2HUNK)
 	set(SMITE_EXECUTABLE smite.elf)
 	set(SMITE_OUTPUT_EXECUTABLE smite.exe)
