--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
 			"request": "launch",
 			"name": "Amiga 500",
 			"config": "A500",
-			"program": "${workspaceFolder}/build/smite",
+			"program": "${workspaceFolder}/build/unknown/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-130.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
@@ -16,7 +16,7 @@
 			"request": "launch",
 			"name": "Amiga 1200",
 			"config": "A1200",
-			"program": "${workspaceFolder}/build/smite",
+			"program": "${workspaceFolder}/build/unknown/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
@@ -25,7 +25,7 @@
 			"request": "launch",
 			"name": "Amiga 1200-4mb",
 			"config": "A1200-FAST",
-			"program": "${workspaceFolder}/build/smite",
+			"program": "${workspaceFolder}/build/unknown/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
@@ -34,7 +34,7 @@
 			"request": "launch",
 			"name": "Amiga 4000",
 			"config": "A4000",
-			"program": "${workspaceFolder}/build/smite",
+			"program": "${workspaceFolder}/build/unknown/smite",
 			"kickstart": "C:\\Users\\Public\\Documents\\Amiga Files\\Shared\\rom\\amiga-os-310-a1200.rom",
 			"internalConsoleOptions": "openOnSessionStart"
 		}
