Enhance CMake configuration and game state management
- Set the target CPU to 68020 and disabled aggressive optimizations to prevent crashes.
- Added a custom command to generate a build number during the pre-build phase.
- Updated game state structure to include a monster list and script state for enhanced gameplay mechanics.
- Introduced new event handling logic for monsters, including combat and experience gain.
- Improved script execution with condition evaluation and stack management for nested constructs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
 		"title.h": "c",
 		"extview.h": "c",
 		"game_ui.h": "c",
-		"layer.h": "c"
+		"layer.h": "c",
+		"disk_file_private.h": "c"
 	},
 	"cmake.configureOnOpen": false,
 	// //"cmake.buildDirectory": "${workspaceFolder}/amiga"
