Increment build number to 307 and update game state management
- Updated BUILD_NUM and build_number.h to reflect the new build number.
- Enhanced tasks.json to set the default build group for better integration.
- Added new extern variables in GameState.h for tracking game state loading and win requests.
- Implemented gameDisplayMessage function in game.c for displaying messages in the UI.
- Improved event handling in script.c to support new events for displaying messages and managing inventory.
- Added mazeGetStringByIndex function in maze.c for retrieving strings from the maze's string table.
- Updated loading.c to manage loading state transitions more effectively.
- Refactored game state management to improve robustness and prevent potential crashes.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,7 +41,10 @@
 			"label": "debug off",
 			"type": "shell",
 			"command": "cmake",
-			"group": "build",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
 			"args": [
 				"..",
 				"-DACE_DEBUG=OFF",
